<resources>
    <string name="app_name">GeoLaps</string>
    <string name="usuario">Nombre de usuario</string>
    <string name="pass">Contraseña</string>
    <string name="pass2">Confirmación contraseña</string>
    <string name="Log">Ingreso</string>
    <string name="Registrar">Registro</string>
    <string name="title_activity_registro">Registro de usuario</string>
    <string name="title_activity_nuevo_recordatorio">Nuevo recordatorio</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="foto">Foto</string>

    <string name="lugares">Lugar</string>

    <string name="action_settings">Opciones</string>
    <string name="title_activity_maps">Escoge o buscar un lugar</string>

    <string name="sign_out">sign out</string>
    <string name="signed_out">signed out</string>
    <string name="disconnect">disconnect</string>
    <string name="loading">loading</string>
    <string name="signed_in_fmt">signed_in_fmt</string>
    <string name="nombre_recordatorio">Nombre del recordatorio</string>
    <string name="ej_pagar_factura">Ej: "Pagar factura"</string>
    <string name="tipo_de_recordatorio">Tipo de recordatorio</string>
    <string name="perfil_usuario">Mi perfil</string>
    <string name="recordatorios">Recordatorios</string>
    <string name="tipo_de_lugar">Tipo de lugares</string>
    <string name="descripcion">Descripción</string>
    <string name="opcional">Opcional</string>
    <string name="fecha">Fecha límite</string>
    <string name="ddmmaa">dd-mm-aaaa</string>
    <string name="hora">Hora límite</string>
    <string name="hhmm">hh:mm</string>
    <string name="campos_incompletos">El título y el lugares son obligatorios</string>
    <string name="recordatorio_guardado">Recordatorio guardado</string>

    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="buscar">Buscar</string>
    <string name="txt_buscar">Buscar un lugar o dirección</string>
    <string name="notification_information">Notificación lugar</string>
    <string name="lugar_no_direccion">El lugar no tiene dirección</string>
    <string name="recordar_en">Recordar</string>
    <string name="lugar_especifico">En un lugar específico</string>
    <string name="en_tipo_lugar">En un tipo de lugar</string>
    <string name="map">map</string>
    <string name="distancia_recordatorio">Distancia</string>
    <string name="recordatorios_activos">Recordatorios Activos</string>
    <string name="recordatorios_vencidos">Recordatorios Vencidos</string>
    <string name="opciones">Opciones</string>
    <string name="detalles_recordatorio">Detalles</string>
    <string name="title_editar_recordatorio">Editar recordatorio</string>
    <string name="lista_de_recordatorios">Lista de recordatorios</string>
    <string name="geolaps_lista_recordatorios">Geolaps - Recordatorios</string>
    <string name="fecha_invalida">La fecha no puede ser anterior a la actual</string>
</resources>
