<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr4.geolaps.Registro">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_usuarioRegistro"
        android:hint="@string/usuario"
        android:layout_above="@+id/txt_nombreRegistro"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_nombreRegistro"
        android:hint="@string/nombre"
        android:layout_above="@+id/txt_correoRegistro"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_correoRegistro"
        android:hint="@string/correo"
        android:layout_above="@+id/txt_claveRegistro"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_claveRegistro"
        android:hint="@string/pass"
        android:layout_above="@+id/txt_clave2Registro"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_clave2Registro"
        android:hint="@string/pass2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Registrar"
        android:id="@+id/btn_registro"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/txt_clave2Registro"
        android:layout_alignLeft="@+id/txt_clave2Registro"
        android:layout_alignStart="@+id/txt_clave2Registro" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_sing_in_Google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_alignTop="@+id/btn_registro"
        android:layout_toRightOf="@+id/txt_nombreRegistro"
        android:layout_toEndOf="@+id/txt_nombreRegistro" />

</RelativeLayout>
