<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usuario_Log"
        android:hint="@string/usuario"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contraseña"
        android:hint="@string/pass"
        android:layout_below="@+id/usuario_Log"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Log"
        android:id="@+id/btn_login"
        android:onClick="onClick"
        android:layout_marginTop="59dp"
        android:layout_below="@+id/contraseña"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Registrar"
        android:id="@+id/btn_registroLogin"
        android:onClick="onClick"
        android:layout_alignTop="@+id/btn_login"
        android:layout_toRightOf="@+id/btn_login"
        android:layout_toEndOf="@+id/btn_login"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:background="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/informationTextView"
        android:text="@string/registering_message"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/btn_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ProgressBar
        android:id="@+id/registrationProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
