<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoRecordatorio"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        tools:context=".Login"
        android:orientation="vertical">
        
        <fragment
            android:id="@+id/Mapas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            tools:layout="@layout/activity_maps" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_recordatorio"
                android:id="@+id/txt_nombreRecordatorio"
                android:textColor="@color/primary_text"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_nombreRecordatorio"
                android:id="@+id/txt_titulo_recordatorio"
                android:hint="@string/ej_pagar_factura"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo_de_recordatorio"
                android:id="@+id/txt_tipo_recordatorio"
                android:textColor="@color/primary_text"
                android:paddingTop="16dp"
                android:layout_below="@id/txt_titulo_recordatorio"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_tipo_recordatorio"/>




        </RelativeLayout>




    </ScrollView>



</LinearLayout>
